src/main/java/top/scaleda/tcl/parser/TclParser.java
// Generated from java-escape by ANTLR 4.11.1
package top.scaleda.tcl.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TclParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, CONST_INTEGER=36, CONST_DOUBLE=37, 
		CONST_STRING=38, IDENTIFICADOR=39, COMM_STR=40, UNKNOW_STR=41, NEWLINE=42, 
		WS=43, COMMENT=44, COMMENT_INLINE=45, BAD_CHAR=46;
	public static final int
		RULE_inicio = 0, RULE_identificator = 1, RULE_puts = 2, RULE_gets = 3, 
		RULE_source = 4, RULE_declaracion = 5, RULE_func_internal = 6, RULE_func_arg = 7, 
		RULE_func_args = 8, RULE_func_call = 9, RULE_func_proc = 10, RULE_agrup = 11, 
		RULE_aux_agrup = 12, RULE_aux_array = 13, RULE_param_func = 14, RULE_aux_param = 15, 
		RULE_asignacion = 16, RULE_indice = 17, RULE_val_indice = 18, RULE_const = 19, 
		RULE_line_empty = 20, RULE_line = 21, RULE_expr = 22, RULE_expresion = 23, 
		RULE_exp_or = 24, RULE_exp_and = 25, RULE_exp_ig = 26, RULE_exp_rel = 27, 
		RULE_exp_add = 28, RULE_exp_mul = 29, RULE_exp_pot = 30, RULE_exp_una = 31, 
		RULE_term = 32, RULE_op_ig = 33, RULE_op_rel = 34, RULE_op_add = 35, RULE_op_mul = 36, 
		RULE_op_una = 37, RULE_comm_str = 38, RULE_unknown_str = 39, RULE_func_name = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "identificator", "puts", "gets", "source", "declaracion", "func_internal", 
			"func_arg", "func_args", "func_call", "func_proc", "agrup", "aux_agrup", 
			"aux_array", "param_func", "aux_param", "asignacion", "indice", "val_indice", 
			"const", "line_empty", "line", "expr", "expresion", "exp_or", "exp_and", 
			"exp_ig", "exp_rel", "exp_add", "exp_mul", "exp_pot", "exp_una", "term", 
			"op_ig", "op_rel", "op_add", "op_mul", "op_una", "comm_str", "unknown_str", 
			"func_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'$'", "'${'", "'}'", "'puts'", "'gets'", "'stdin'", "'source'", 
			"'set'", "'['", "']'", "'array'", "'size'", "'exists'", "'{'", "'('", 
			"')'", "'expr'", "'||'", "'&&'", "'**'", "'eq'", "'=='", "'ne'", "'!='", 
			"'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"CONST_INTEGER", "CONST_DOUBLE", "CONST_STRING", "IDENTIFICADOR", "COMM_STR", 
			"UNKNOW_STR", "NEWLINE", "WS", "COMMENT", "COMMENT_INLINE", "BAD_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TclParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TclParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 4947802325856L) != 0) {
				{
				{
				setState(82);
				line();
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(83);
					match(T__0);
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentificatorContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(TclParser.IDENTIFICADOR, 0); }
		public IndiceContext indice() {
			return getRuleContext(IndiceContext.class,0);
		}
		public IdentificatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterIdentificator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitIdentificator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitIdentificator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentificatorContext identificator() throws RecognitionException {
		IdentificatorContext _localctx = new IdentificatorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identificator);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(T__1);
				setState(97);
				match(IDENTIFICADOR);
				setState(98);
				indice();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(T__2);
				setState(100);
				match(IDENTIFICADOR);
				setState(101);
				match(T__3);
				setState(102);
				indice();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PutsContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public PutsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterPuts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitPuts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitPuts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PutsContext puts() throws RecognitionException {
		PutsContext _localctx = new PutsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_puts);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__4);
			setState(106);
			asignacion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GetsContext extends ParserRuleContext {
		public GetsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gets; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterGets(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitGets(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitGets(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GetsContext gets() throws RecognitionException {
		GetsContext _localctx = new GetsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_gets);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__5);
			setState(109);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public TerminalNode COMM_STR() { return getToken(TclParser.COMM_STR, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__7);
			setState(112);
			match(COMM_STR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(TclParser.IDENTIFICADOR, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__8);
			setState(115);
			match(IDENTIFICADOR);
			setState(116);
			asignacion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_internalContext extends ParserRuleContext {
		public GetsContext gets() {
			return getRuleContext(GetsContext.class,0);
		}
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public PutsContext puts() {
			return getRuleContext(PutsContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public Func_internalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_internal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterFunc_internal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitFunc_internal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitFunc_internal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_internalContext func_internal() throws RecognitionException {
		Func_internalContext _localctx = new Func_internalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func_internal);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				gets();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				source();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				puts();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				declaracion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_argContext extends ParserRuleContext {
		public Comm_strContext comm_str() {
			return getRuleContext(Comm_strContext.class,0);
		}
		public IdentificatorContext identificator() {
			return getRuleContext(IdentificatorContext.class,0);
		}
		public ConstContext const_() {
			return getRuleContext(ConstContext.class,0);
		}
		public TerminalNode UNKNOW_STR() { return getToken(TclParser.UNKNOW_STR, 0); }
		public Func_argContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterFunc_arg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitFunc_arg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitFunc_arg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_argContext func_arg() throws RecognitionException {
		Func_argContext _localctx = new Func_argContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_func_arg);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFICADOR:
			case COMM_STR:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				comm_str();
				}
				break;
			case T__1:
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				identificator();
				}
				break;
			case CONST_INTEGER:
			case CONST_DOUBLE:
			case CONST_STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				const_();
				}
				break;
			case UNKNOW_STR:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				match(UNKNOW_STR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_argsContext extends ParserRuleContext {
		public List<Func_argContext> func_arg() {
			return getRuleContexts(Func_argContext.class);
		}
		public Func_argContext func_arg(int i) {
			return getRuleContext(Func_argContext.class,i);
		}
		public Func_argsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterFunc_args(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitFunc_args(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitFunc_args(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_argsContext func_args() throws RecognitionException {
		Func_argsContext _localctx = new Func_argsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_func_args);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(130);
					func_arg();
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_callContext extends ParserRuleContext {
		public Func_nameContext func_name() {
			return getRuleContext(Func_nameContext.class,0);
		}
		public Func_argsContext func_args() {
			return getRuleContext(Func_argsContext.class,0);
		}
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterFunc_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitFunc_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitFunc_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_func_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			func_name();
			setState(137);
			func_args();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_procContext extends ParserRuleContext {
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public Func_internalContext func_internal() {
			return getRuleContext(Func_internalContext.class,0);
		}
		public Func_procContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_proc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterFunc_proc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitFunc_proc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitFunc_proc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_procContext func_proc() throws RecognitionException {
		Func_procContext _localctx = new Func_procContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_func_proc);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				func_call();
				}
				break;
			case T__4:
			case T__5:
			case T__7:
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				func_internal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AgrupContext extends ParserRuleContext {
		public Aux_agrupContext aux_agrup() {
			return getRuleContext(Aux_agrupContext.class,0);
		}
		public AgrupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agrup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterAgrup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitAgrup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitAgrup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgrupContext agrup() throws RecognitionException {
		AgrupContext _localctx = new AgrupContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_agrup);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__9);
			setState(144);
			aux_agrup();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Aux_agrupContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(TclParser.IDENTIFICADOR, 0); }
		public Param_funcContext param_func() {
			return getRuleContext(Param_funcContext.class,0);
		}
		public GetsContext gets() {
			return getRuleContext(GetsContext.class,0);
		}
		public Aux_arrayContext aux_array() {
			return getRuleContext(Aux_arrayContext.class,0);
		}
		public Aux_agrupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aux_agrup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterAux_agrup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitAux_agrup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitAux_agrup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Aux_agrupContext aux_agrup() throws RecognitionException {
		Aux_agrupContext _localctx = new Aux_agrupContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_aux_agrup);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__17:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				expr();
				setState(147);
				match(T__10);
				}
				break;
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				match(IDENTIFICADOR);
				setState(150);
				param_func();
				setState(151);
				match(T__10);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				gets();
				setState(154);
				match(T__10);
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 4);
				{
				setState(156);
				match(T__11);
				setState(157);
				aux_array();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Aux_arrayContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(TclParser.IDENTIFICADOR, 0); }
		public Aux_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aux_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).enterAux_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TclListener ) ((TclListener)listener).exitAux_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TclVisitor ) return ((TclVisitor<? extends T>)visitor).visitAux_array(this);
			else return visitor.visitChildren(this);
		}
	}
